[package]
name = "esp32-logger"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = { git = "https://github.com/esp-rs/esp32-hal.git", rev = "f2c6fc9" }
