[package]
name = "esp32-logger"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32 = "0.3.0"
esp32-hal = { git = "https://github.com/esp-rs/esp32-hal" }
spin = "0.5.2"
