[package]
name = "esp32-logger"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanhossain/esp32-logger"
homepage = "https://github.com/hanhossain/esp32-logger"
documentation = "https://github.com/hanhossain/esp32-logger"
readme = "README.md"
description = "Simple logger for the ESP32"
keywords = ["no-std", "esp32", "logging", "embedded"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = "0.2.0"
log = "0.4.14"